# ac_ai_api

./: .gitignore  pyproject.toml
src/: .coveragerc  db.sqlite3  manage.py  pytest.ini  resetdb
src/ac_ai_api_auth/: apps.py  forms.py  models.py  permisions.py  urls.py  views.py
src/ac_ai_api_auth/migrations/: 0001_initial.py
src/ac_ai_api_auth/templates/ac_ai_api_auth/: login.html  token.html
src/ac_ai_api_project/: asgi.py  settings.py  urls.py  wsgi.py
src/ac_ai_api_project/templates/: header.html
src/api/: models.py  restrictions.py  urls.py  views.py
src/api/migrations/: 0001_initial.py
src/api_apps/nlp/: models.py  urls.py
src/nlp/: serializers.py  tasks.py  urls.py  views.py
src/nlp/algorithms/: nlp.py
src/tests/ac_ai_api_auth/: ac_ai_api_auth_test.py
src/web/: README  urls.py
src/web/templates/web/: index.html
